# poppler_mirror

./: .cirrus.yml  .clang-tidy  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  ConfigureChecks.cmake  INSTALL  Makefile.am  NEWS  README-XPDF  README.contributors  _clang-format  appveyor.ini  appveyor.yml  autogen.sh  config.h.cmake  configure.ac  do-the-gnupg-2.4-dance.sh  gtk-doc.make  gtkdoc.py  make-glib-api-docs  poppler-cairo.pc.cmake  poppler-cpp.pc.cmake  poppler-glib-uninstalled.pc.in  poppler-glib.pc.cmake  poppler-glib.pc.in  poppler-qt4.pc.cmake  poppler-qt5.pc.cmake  poppler-qt6.pc.cmake  poppler-splash.pc.cmake  poppler.pc.cmake  sonar-project.properties
cpp/: CMakeLists.txt  Doxyfile  Makefile.am  poppler-destination-private.h  poppler-destination.cpp  poppler-destination.h  poppler-document-private.h  poppler-document.cpp  poppler-document.h  poppler-embedded-file-private.h  poppler-embedded-file.cpp  poppler-embedded-file.h  poppler-font-private.h  poppler-font.cpp  poppler-font.h  poppler-global.cpp  poppler-global.h  poppler-image-private.h  poppler-image.cpp  poppler-image.h  poppler-page-private.h  poppler-page-renderer.cpp  poppler-page-renderer.h  poppler-page-transition.cpp  poppler-page-transition.h  poppler-page.cpp  poppler-page.h  poppler-private.cpp  poppler-private.h  poppler-rectangle.cpp  poppler-rectangle.h  poppler-toc-private.h  poppler-toc.cpp  poppler-toc.h  poppler-version.cpp
cpp/tests/: CMakeLists.txt  Makefile.am  pdf_fuzzer.cc  poppler-alpha-bg-test.cpp  poppler-dump.cpp  poppler-render.cpp
glib/: .gitignore  CMakeLists.txt  Makefile.am  poppler-action.cc  poppler-action.h  poppler-annot.cc  poppler-annot.h  poppler-attachment.cc  poppler-attachment.h  poppler-autocleanups.h  poppler-cached-file-loader.cc  poppler-cached-file-loader.h  poppler-date.cc  poppler-document.cc  poppler-document.h  poppler-enums.c.template  poppler-enums.h.template  poppler-form-field.cc  poppler-form-field.h  poppler-input-stream.cc  poppler-input-stream.h  poppler-layer.cc  poppler-layer.h  poppler-media.cc  poppler-media.h  poppler-movie.cc  poppler-movie.h  poppler-page.cc  poppler-page.h  poppler-private.h  poppler-structure-element.cc  poppler-structure-element.h  poppler.cc  poppler.h
glib/demo/: CMakeLists.txt  Makefile.am  annots.c  annots.h  attachments.c  attachments.h  find.c  find.h  fonts.c  fonts.h  forms.c  forms.h  images.c  images.h  info.cc  info.h  layers.c  layers.h  links.c  links.h  main.c  outline.c  outline.h  page.c  page.h  print.c  print.h  render.c  render.h  selections.c  selections.h  signature.c  signature.h  taggedstruct.c  taggedstruct.h  text.c  text.h  transitions.c  transitions.h  utils.c  (+1 more)
glib/reference/: .gitignore  CMakeLists.txt  Makefile.am  poppler-docs.sgml  poppler-sections.txt  poppler.types
glib/tests/: CMakeLists.txt  check_bb.c  check_text.c  pdfdrawbb.c
qt5/: CMakeLists.txt
qt5/demos/: .gitignore  CMakeLists.txt  Makefile.am  abstractinfodock.cpp  abstractinfodock.h  documentobserver.cpp  documentobserver.h  embeddedfiles.cpp  embeddedfiles.h  fonts.cpp  fonts.h  info.cpp  info.h  main_viewer.cpp  metadata.cpp  metadata.h  navigationtoolbar.cpp  navigationtoolbar.h  optcontent.cpp  optcontent.h  pageview.cpp  pageview.h  permissions.cpp  permissions.h  thumbnails.cpp  thumbnails.h  toc.cpp  toc.h  viewer.cpp  viewer.h
qt5/src/: ArthurOutputDev.cc  ArthurOutputDev.h  CMakeLists.txt  Doxyfile  Mainpage.dox  Makefile.am  QPainterOutputDev.cc  QPainterOutputDev.h  poppler-annotation-helper.h  poppler-annotation-private.h  poppler-annotation.cc  poppler-annotation.h  poppler-base-converter.cc  poppler-converter-private.h  poppler-document.cc  poppler-embeddedfile-private.h  poppler-embeddedfile.cc  poppler-export.h  poppler-fontinfo.cc  poppler-form.cc  poppler-form.h  poppler-link-extractor-private.h  poppler-link-extractor.cc  poppler-link-private.h  poppler-link.cc  poppler-link.h  poppler-media.cc  poppler-media.h  poppler-movie.cc  poppler-optcontent-private.h  poppler-optcontent.cc  poppler-optcontent.h  poppler-outline-private.h  poppler-outline.cc  poppler-page-private.h  poppler-page-transition-private.h  poppler-page-transition.cc  poppler-page-transition.h  poppler-page.cc  poppler-pdf-converter.cc  (+10 more)
qt5/tests/: .gitignore  CMakeLists.txt  Makefile.am  README.unittest  check_actualtext.cpp  check_annotations.cpp  check_attachments.cpp  check_cidfontswidthsbuilder.cpp  check_dateConversion.cpp  check_distinguished_name_parser.cpp  check_fonts.cpp  check_forms.cpp  check_goostring.cpp  check_internal_outline.cpp  check_lexer.cpp  check_links.cpp  check_metadata.cpp  check_object.cpp  check_optcontent.cpp  check_outline.cpp  check_overprint.cpp  check_pagelabelinfo.cpp  check_pagelayout.cpp  check_pagemode.cpp  check_password.cpp  check_permissions.cpp  check_search.cpp  check_signature_basics.cpp  check_strings.cpp  check_stroke_opacity.cpp  check_utf8document.cpp  check_utf_conversion.cpp  poppler-attachments.cpp  poppler-fonts.cpp  poppler-forms.cpp  poppler-page-labels.cpp  poppler-texts.cpp  stress-poppler-dir.cpp  stress-poppler-qt5.cpp  stress-threads-qt5.cpp  (+3 more)
qt6/: CMakeLists.txt
test/: CMakeLists.txt  Makefile.am  cairo-thread-test.cc  gtk-splash-test.cc  gtk-test.cc  image-embedding.cc  pdf-fullrewrite.cc  pdf-inspector.cc  pdf-inspector.ui  pdf-operators.h  pdf-signing-nss.cc  pdf-validate-signature.cc  perf-test-preview-dummy.cc  perf-test-preview-win.cc  perf-test.cc
utils/: .gitignore  CMakeLists.txt  HtmlFonts.cc  HtmlFonts.h  HtmlLinks.cc  HtmlLinks.h  HtmlOutputDev.cc  HtmlOutputDev.h  HtmlUtils.h  ImageOutputDev.cc  ImageOutputDev.h  InMemoryFile.cc  InMemoryFile.h  JSInfo.cc  JSInfo.h  Makefile.am  Win32Console.cc  Win32Console.h  numberofcharacters.h  parseargs.cc  parseargs.h  pdf2xml.dtd  pdfattach.cc  pdfdetach.1  pdfdetach.cc  pdfextract.1  pdfextract.cc  pdffonts.1  pdffonts.cc  pdfimages.1  pdfimages.cc  pdfinfo.1  pdfinfo.cc  pdfmerge.1  pdfmerge.cc  pdfseparate.1  pdfseparate.cc  pdfsig.1  pdfsig.cc  pdfsigverify.cc  (+17 more)
(+584 files in other folders)
